--- a/package.json
+++ b/package.json
@@ -1,27 +1,15 @@
 {
-  "name": "desingpatternscode",
+  "name": "desingpatterns",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p .",
+    "start": "node ./dist/Creacionales/Factory Method.js",
+    "dev:ts-node": "ts-node \"Creacionales/Factory Method.ts\"",
+    "dev:tsx": "tsx \"Creacionales/Factory Method.ts\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "acorn": "^8.15.0",
-    "acorn-walk": "^8.3.4",
-    "arg": "^4.1.3",
-    "create-require": "^1.1.1",
-    "diff": "^4.0.2",
-    "make-error": "^1.3.6",
-    "undici-types": "^7.14.0",
-    "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1"
-  },
-  "description": ""
+    "tsx": "^4.20.6"
+  }
 }
