Abstract Factoy busca agrupar un conjunto de clases que tienen un funcionamiento en comun, llamadas familias, las cuales son creadas mediantes una Fabrica. Este patron es util cuando requerimos tener ciertas familiar de clases para resolver un problema, pero puede que sea necesario crear implementaciones paralelas de estas clases para resolver el mismo problema

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,5 +22,16 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     }
+    ,
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Abstract Factory (ts-node)",
+      "program": "${workspaceFolder}/Creacionales/Abstract Factory.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeArgs": ["-r", "ts-node/register"],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    }
   ]
 }
